[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/SpaceShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 2.72603
height = 4.3765

[sub_resource type="CubeMesh" id=3]

[node name="Player" type="KinematicBody" groups=["player"]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
collision_mask = 6
script = ExtResource( 2 )

[node name="SpaceShip" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.087, 0, 0, 0, 0.587, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CockpitCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.275, -1.661 )

[node name="BulletProjectArm" type="MeshInstance" parent="."]
transform = Transform( 0.26, 0, 0, 0, 0.294, 0, 0, 0, 7, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="FrontBulletProjector" type="Position3D" parent="BulletProjectArm"]
transform = Transform( 3.84615, 0, 0, 0, -3.40135, 3.09184e-08, 0, -5.1359e-07, -0.204763, 0, 0.000794411, -1.00154 )

[node name="BackBulletProjector" type="Position3D" parent="BulletProjectArm"]
transform = Transform( -3.84615, -2.59956e-14, 1.7901e-08, 0, -3.40135, -1.7901e-08, 3.36241e-07, -2.97356e-07, 0.204763, 8.69795e-05, 0.0007267, 0.994345 )

[node name="RateOfFireTimer" type="Timer" parent="."]
one_shot = true

[node name="RearViewViewportContainer" type="ViewportContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Viewport" type="Viewport" parent="RearViewViewportContainer"]
size = Vector2( 400, 200 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 0

[node name="RearViewCamera" type="Camera" parent="RearViewViewportContainer/Viewport"]
transform = Transform( 1, -8.74228e-08, 8.74228e-08, -8.74228e-08, -1, 0, 8.74228e-08, -7.64274e-15, -1, 0, 2.165, 0 )
fov = 100.0
near = 0.55

[node name="TopDownCameraRemoteTransform" type="RemoteTransform" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 68.943, 0 )

[connection signal="timeout" from="RateOfFireTimer" to="." method="_on_RateOfFireTimer_timeout"]
